--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,18 @@
 spring:
+  # 数据源
   datasource:
     url: jdbc:mysql://localhost:3306/store
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
+
+
+mybatis:
+  # sql映射文件
+  mapper-locations: classpath:mapper/*.xml
+  # 别名
+  type-aliases-package: com.cy.store.entity
+  # 开启驼峰命名
+  configuration:
+    map-underscore-to-camel-case: true
+
