--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,14 @@ spring:
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
 
+  # 修改上传文件的大小
+  servlet:
+    multipart:
+      # 单个文件不能超过10MB
+      max-file-size: 10MB
+      # 多个文件不能超过15MB
+      max-request-size: 15MB
+
 
 mybatis:
   # sql映射文件
